# webcat

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
Gui/: CMakeLists.txt  Gui_en_AS.ts
Http/: CMakeLists.txt  Fetch.hpp  Get.cpp  Socket.cpp
Parser/: CMakeLists.txt
lib/: CMakeLists.txt  Split.cpp  Split.hpp
